# WorldCupOddsAndEvents

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: cache.py  config.py  database.py  main.py
backend/app/adapters/: base.py  registry.py
backend/app/adapters/events/: database_event_adapter.py  gdelt_adapter.py  mock_event_adapter.py  mock_team_event_adapter.py  offline_event_adapter.py
backend/app/adapters/odds/: mock_champion_odds_adapter.py  mock_odds_adapter.py  polymarket_champion_adapter.py
backend/app/api/: cache.py  champion.py  correlations.py  datasources.py  events.py  odds.py
backend/app/engine/: changepoint.py  correlation.py
backend/app/models/: champion.py  correlation.py  curve.py  event.py  odds.py
backend/scripts/: import_excel.py
docs/: ProjectResumeGuide.MD  SystemDesign.MD
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChampionEvents.tsx  ChampionRanking.tsx  ChampionTrend.tsx  CorrelationPanel.tsx  EventTimeline.tsx  LLMSettings.tsx  OddsChart.tsx  SearchPage.tsx  SearchPanel.tsx  TeamSelector.tsx  Toast.tsx  Toolbar.tsx  TopPicks.tsx
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
